# FinanzQuest

./: .env.local  .gitignore  Caddyfile  Caddyfile.dev  compose.core.yml  compose.dev.yml  compose.yml  flake.nix  nginx.conf  nginx.prod.conf  setup.bash  sp.sql
dbinit/: admin.sql  functions.sql  init.sh  init.sql
frontend/: Dockerfile  flake.nix  generate_keys.sh  next.config.mjs  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css
frontend/app/(auth)/: actions.tsx
frontend/app/(auth)/signout/: route.ts
frontend/app/(auth)/signup/: form.tsx
frontend/app/(dashboard)/: page.tsx
frontend/app/(dashboard)/admin/: table.tsx
frontend/components/: asset_picker.tsx
frontend/components/charts/: area.tsx  candle_stick.tsx  tree.tsx
frontend/database/: custom_types.ts  types.ts
frontend/hooks/: use-toast.ts
frontend/lib/: cash_display_string.ts  get_depot_id.ts  util.ts
frontend/lib/depot_cookie/: client.ts  encode.ts  server.ts
frontend/utils/supabase/: admin.ts  client.ts  proxy.ts  server.ts
nginx/: nginx.conf
nginx/conf.d/server/: frontend.conf
nixos/: configuration.nix  flake.nix  hardware-configuration.nix  home.nix  variables.nix
nixos/nixos/: docker.nix  https.nix  network-manager.nix  users.nix
updater/: Cargo.toml  dockerfile  run_updater.sh  startup.sh
updater/.sqlx/: query-eb79c8cb4f79bd5d4ad277c14fe92b057f684e2715aed89048eb3fbbd16a3c60.json  query-f4c55dd88da72511d3cc00a4eed645ad605a16e49f0858ac77ff839d1df1aa9c.json
updater/src/: alpaca.rs  main.rs  priceframe.rs  uploader.rs  yf.rs
(+11 files in other folders)
