[package]
name = "updater"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"]}
serde_json = "1.0.141"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "serde-human-readable", "parsing", "formatting"] }
sqlx = { version = "0.8.6", features = ["derive", "json", "macros", "postgres", "runtime-tokio", "time"] }
tokio = { version = "1.47.0", features = ["full"] }
rand = "0.9.2"
strum = "0.28.0"
strum_macros = "0.28.0"
async-stream = "0.3.6"
tokio-stream = "0.1.18"
